--- a/Global.css
+++ b/Global.css
@@ -318,7 +318,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 128%;
-    left: 40%;
+    left: 20%;
     transform: translate(-50%, -50%);
 }
 
@@ -373,7 +373,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 128%;
-    left: 60%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -452,15 +452,35 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 128%;
-    left: 50%;
+    left: 80%;
     transform: translate(-50%, -50%);
+}
+
+.card3 {
+    height: 500px;
 }
 
 .card3-title {
     position: relative;
     font-size: 36px;
+    height: -40px;
+    margin-left: 15px;
     color: white;
-    top: 500px;
+    top: 240px;
+}
+
+.card3-text {
+    position: absolute;
+    color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+    top: 290px;
+}
+
+.contactlist {
+    position: relative;
+    color: white;
+    top: 270px;
 }
 /* #endregion Card Three */
 
