Added about me paragraph

--- a/Global.css
+++ b/Global.css
@@ -687,6 +687,7 @@ body {
 .AboutMeBody {
     height: 100vh;
 }
+/* #endregion About Me Body */
 
 /* #region AboutMe Intro */
 .AboutMe-container {
