--- a/Global.css
+++ b/Global.css
@@ -359,7 +359,7 @@ body {
 }
 .card-body a {
     position: relative;
-    background-color: aqua;
+    background-color: rgb(45, 26, 224);
     color: gray;
     top: 100px;
     text-align: center;
@@ -393,7 +393,7 @@ body {
     height: -40px;
     margin-left: 15px;
     color: white;
-    top: 177.5px;
+    top: 127.5px;
 }
 
 .card2-text {
@@ -401,7 +401,7 @@ body {
     color: white;
     margin-left: 15px;
     margin-right: 15px;
-    top: 365px;
+    top: 415px;
 }
 
 #HTML-icon {
@@ -420,10 +420,17 @@ body {
 }
 #JS-icon {
     top: 170px;
-    left: -82.5px;
+    left: -10px;
     height: 90px;
     width: 80px;
     animation: rotating 3s infinite;
+}
+#PY-icon {
+  top: 85px;
+  left: 30px;
+  height: 90px;
+  width: 80px;
+  animation: rotating 3s infinite;
 }
 /* #endregion Card Two */
 
@@ -530,7 +537,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 120%;
-    left: 20%;
+    left: 10%;
     transform: translate(-50%, -50%);
 }
 
@@ -574,7 +581,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 120%;
-    left: 40%;
+    left: 30%;
     transform: translate(-50%, -50%);
 }
 
@@ -614,7 +621,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 120%;
-    left: 60%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -652,7 +659,7 @@ body {
     background-color: rgb(0, 0, 0);
     border: 1px gray solid;
     top: 120%;
-    left: 80%;
+    left: 70%;
     transform: translate(-50%, -50%);
 }
 
@@ -686,6 +693,47 @@ body {
     left: 35%;
 }
 /* #endregion Card Four */
+
+/* #region Card Five */
+.projectCard5-container {
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  border: 1px gray solid;
+  top: 120%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+}
+
+.cardProj5-body {
+  position: relative;
+  height: 500px;
+}
+#projGithub {
+  position: absolute;
+  height: 200px;
+  left: 45px;
+  top: 45px;
+}
+.cardProj5-title {
+  position: relative;
+  color: white;
+  top: 300px;
+  font-size: 36px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.cardProj5-text {
+  position: relative;
+  color: white;
+  top: 300px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+#Githubbtn {
+  position: relative;
+  left: 35%;
+}
+/* #endregion Card Five */
 
 
 /*------------------------------------------About me Intro------------------------------------------*/
